--- a/06currencyConverter/src/index.css
+++ b/06currencyConverter/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+input[type="number"] {
+    appearance: none;
+    -webkit-appearance: none; 
+    -moz-appearance: textfield;
+}
+@layer base {
+    input[type="number"] {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: textfield;
+    }
+}
